# secure-model-context-protocol

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: ci.yml  npm-publish.yml  security.yml
RFC/: seal-v1-specification.md  smcp-v1-specification.md
docs/: concepts.md  getting-started.md  integration-guide.md  sdk-reference.md  security.md
sdk/python/: README.md  pyproject.toml
sdk/python/seal/: __init__.py  client.py  crypto.py  envelope.py  server.py
sdk/python/smcp/: __init__.py  client.py  crypto.py  envelope.py  server.py
sdk/python/tests/: test_envelope.py  test_server.py
sdk/typescript/: README.md  eslint.config.js  jest.config.cjs  package-lock.json  package.json  tsconfig.json
sdk/typescript/__tests__/: envelope.test.ts  server.test.ts
sdk/typescript/src/: client.ts  crypto.ts  envelope.ts  index.ts  server.ts
