[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smcp"
description = "A Python client wrapper for the Secure Model Context Protocol (SMCP)"
readme = "README.md"
authors = [
    { name = "100monkeys.ai", email = "info@100monkeys.ai" }
]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["smcp", "mcp", "ai", "agents", "security"]
dependencies = [
    "cryptography>=41.0.0",
    "requests>=2.30.0",
    "pydantic>=2.4.0",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pip>=24.0",
    "pytest>=7.0.0",
]

[tool.hatch.version]
path = "smcp/__init__.py"
