[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seal"
description = "A Python client wrapper for the Signed Envelope Attestation Layer (SEAL)"
readme = "README.md"
authors = [
    { name = "100monkeys.ai", email = "info@100monkeys.ai" }
]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["seal", "mcp", "ai", "agents", "security"]
dependencies = [
    "cryptography>=47.0.0",
    "requests>=2.30.0",
    "pydantic>=2.13.3",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pip>=26.1",
    "pytest>=7.0.0",
]

[tool.hatch.version]
path = "seal/__init__.py"
